fixed h2 font size on mobile

--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,6 @@ footer {
       padding-right:25%;
     }
 }
-@media only screen and (max-width: 800px) {
-    h2 {font-size: 1.333rem;}
-}
 
 
 
@@ -63,8 +60,12 @@ h1 {
 }
 h2 {font-size: 3.157rem;}
 h3 {font-size: 2.369rem;}
+h4 {font-size: 1.333rem;}
 
-h5 {font-size: 1.333rem;}
+@media only screen and (max-width: 800px) {
+    h2 {font-size: 1.333rem;}
+}
+
 p {margin-bottom: 1rem;}
 a {color: var(--blue);}
 .footer-text {font-size: 0.75rem;}
